--- a/api-spec/paths/register.yml
+++ b/api-spec/paths/register.yml
@@ -30,10 +30,12 @@ register:
                 example: securePassword123
               first_name:
                 type: string
+                maxLength: 100
                 description: Имя пользователя
                 example: Иван
               last_name:
                 type: string
+                maxLength: 100
                 description: Фамилия пользователя
                 example: Иванов
     responses:
